--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,27 @@ library:
       description: 为什么我们记得过去，而非未来？时间“流逝”意味着什么？是我们存在于时间之内，还是时间存在于我们之中？卡洛·罗韦利用诗意的文字，邀请我们思考这一亘古难题——时间的本质。
     - name: 了不起的我
       description: 如何养成一个新习惯？如何让心智变得更成熟？如何拥有高质量的关系？ 如何走出人生的艰难时刻？
+
+
+# 数据库url地址
+spring:
+  datasource:
+    url: jdbc:h2:mem:jpa-demo
+  username: root
+  password: 123456
+  platform: h2
+  driverClassName: org.h2.Driver
+
+  jpa:
+    properties:
+      hibernate.enable_lazy_load_no_trans: true
+    # 打印出 sql 语句
+    show-sql: true
+    hibernate.ddl-auto: update
+    open-in-view: false
+
+  h2:
+    console:
+      enabled: true
+server:
+  port: 8080
